hphp/test/quick/ns_invalid_func.php.expectf

Fatal error: Call to undefined function b() in %s on line 4
